// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersPage renders the users page 1`] = `
<span
  class="ant-typography css-dev-only-do-not-override-98ntnt"
  data-testid="heading"
  style="font-weight: 600; font-size: 16px;"
>
  Users
</span>
`;

exports[`UsersPage should create a user and should be visible in the table: create user button 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-link"
  style="font-weight: 500;"
  type="button"
>
  <span
    class="ant-btn-icon"
  >
    <span
      aria-label="plus-square"
      class="anticon anticon-plus-square"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-square"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
        />
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
        />
      </svg>
    </span>
  </span>
  <span>
    Create User
  </span>
</button>
`;

exports[`UsersPage should create a user and should be visible in the table: create user form with values 1`] = `
<div
  aria-labelledby="test-id"
  aria-modal="true"
  class="ant-modal css-dev-only-do-not-override-98ntnt ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
  role="dialog"
  style="width: 520px;"
>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
  <div
    style="outline: none;"
    tabindex="-1"
  >
    <div
      class="ant-modal-content"
    >
      <button
        aria-label="Close"
        class="ant-modal-close"
        type="button"
      >
        <span
          class="ant-modal-close-x"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-modal-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="ant-modal-header"
      >
        <div
          class="ant-modal-title"
          id="test-id"
        >
          Create User
        </div>
      </div>
      <div
        class="ant-modal-body"
      >
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-98ntnt"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="FirstName"
                  title="First Name"
                >
                  First Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="FirstName"
                      placeholder="Enter First Name"
                      type="text"
                      value="Test"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="LastName"
                  title="Last Name"
                >
                  Last Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="LastName"
                      placeholder="Enter Last Name"
                      type="text"
                      value="User"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Email"
                  title="Email"
                >
                  Email
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="Email"
                      placeholder="Email"
                      type="text"
                      value="test@example.com"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Password"
                  title="Password"
                >
                  Password
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating ant-input-password"
                    >
                      <input
                        aria-required="true"
                        autocomplete="new-password"
                        class="ant-input css-dev-only-do-not-override-98ntnt"
                        id="Password"
                        placeholder="Enter password"
                        type="password"
                        value="password"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class=""
                  for="Active"
                  title="Active"
                >
                  Active
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="false"
                      class="ant-switch css-dev-only-do-not-override-98ntnt"
                      id="Active"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="ant-modal-footer"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-default"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-primary"
          disabled=""
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
</div>
`;

exports[`UsersPage should create a user and should be visible in the table: create user modal 1`] = `
<div
  aria-labelledby="test-id"
  aria-modal="true"
  class="ant-modal css-dev-only-do-not-override-98ntnt ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
  role="dialog"
  style="width: 520px;"
>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
  <div
    style="outline: none;"
    tabindex="-1"
  >
    <div
      class="ant-modal-content"
    >
      <button
        aria-label="Close"
        class="ant-modal-close"
        type="button"
      >
        <span
          class="ant-modal-close-x"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-modal-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="ant-modal-header"
      >
        <div
          class="ant-modal-title"
          id="test-id"
        >
          Create User
        </div>
      </div>
      <div
        class="ant-modal-body"
      >
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-98ntnt"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="FirstName"
                  title="First Name"
                >
                  First Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined"
                      id="FirstName"
                      placeholder="Enter First Name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="LastName"
                  title="Last Name"
                >
                  Last Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined"
                      id="LastName"
                      placeholder="Enter Last Name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Email"
                  title="Email"
                >
                  Email
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-98ntnt ant-input-outlined"
                      id="Email"
                      placeholder="Email"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Password"
                  title="Password"
                >
                  Password
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-password"
                    >
                      <input
                        aria-required="true"
                        autocomplete="new-password"
                        class="ant-input css-dev-only-do-not-override-98ntnt"
                        id="Password"
                        placeholder="Enter password"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class=""
                  for="Active"
                  title="Active"
                >
                  Active
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      class="ant-switch css-dev-only-do-not-override-98ntnt ant-switch-checked"
                      id="Active"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="ant-modal-footer"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-default"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-primary"
          disabled=""
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
</div>
`;

exports[`UsersPage should create a user and should be visible in the table: final table state 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should create a user and should be visible in the table: initial table state 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should delete user successfully: delete confirmation modal 1`] = `
<div
  aria-labelledby="test-id"
  aria-modal="true"
  class="ant-modal css-dev-only-do-not-override-98ntnt ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
  role="dialog"
  style="width: 520px;"
>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
  <div
    style="outline: none;"
    tabindex="-1"
  >
    <div
      class="ant-modal-content"
    >
      <button
        aria-label="Close"
        class="ant-modal-close"
        type="button"
      >
        <span
          class="ant-modal-close-x"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-modal-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="ant-modal-header"
      >
        <div
          class="ant-modal-title"
          id="test-id"
        >
          Are you sure you want to delete "Test" user?
        </div>
      </div>
      <div
        class="ant-modal-body"
      >
        <div
          class="ant-typography css-dev-only-do-not-override-98ntnt"
        >
          This action will delete user.
        </div>
      </div>
      <div
        class="ant-modal-footer"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-default"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-primary ant-btn-dangerous"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
</div>
`;

exports[`UsersPage should delete user successfully: final table state after deletion 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should delete user successfully: initial table state before delete 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should update user successfully: final table state after update 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should update user successfully: initial table state before update 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000001"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="00000000-0000-0000-0000-000000000002"
          >
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="user-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`UsersPage should update user successfully: update user form with values 1`] = `
<div
  aria-labelledby="test-id"
  aria-modal="true"
  class="ant-modal css-dev-only-do-not-override-98ntnt ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
  role="dialog"
  style="width: 520px;"
>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
  <div
    style="outline: none;"
    tabindex="-1"
  >
    <div
      class="ant-modal-content"
    >
      <button
        aria-label="Close"
        class="ant-modal-close"
        type="button"
      >
        <span
          class="ant-modal-close-x"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-modal-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="ant-modal-header"
      >
        <div
          class="ant-modal-title"
          id="test-id"
        >
          Edit User
        </div>
      </div>
      <div
        class="ant-modal-body"
      >
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-98ntnt"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="FirstName"
                  title="First Name"
                >
                  First Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="FirstName"
                      placeholder="Enter First Name"
                      type="text"
                      value="Updated User Name"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="LastName"
                  title="Last Name"
                >
                  Last Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="LastName"
                      placeholder="Enter Last Name"
                      type="text"
                      value="Updated Last Name"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Email"
                  title="Email"
                >
                  Email
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating"
                      id="Email"
                      placeholder="Email"
                      type="text"
                      value="updated@example.com"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-is-validating"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Password"
                  title="Password"
                >
                  Password
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-validating ant-input-password"
                    >
                      <input
                        aria-required="true"
                        autocomplete="new-password"
                        class="ant-input css-dev-only-do-not-override-98ntnt"
                        id="Password"
                        placeholder="Enter password"
                        type="password"
                        value="updatedpassword"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class=""
                  for="Active"
                  title="Active"
                >
                  Active
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="false"
                      class="ant-switch css-dev-only-do-not-override-98ntnt"
                      id="Active"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="ant-modal-footer"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-default"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-primary"
          disabled=""
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
</div>
`;

exports[`UsersPage should update user successfully: update user modal 1`] = `
<div
  aria-labelledby="test-id"
  aria-modal="true"
  class="ant-modal css-dev-only-do-not-override-98ntnt ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
  role="dialog"
  style="width: 520px;"
>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
  <div
    style="outline: none;"
    tabindex="-1"
  >
    <div
      class="ant-modal-content"
    >
      <button
        aria-label="Close"
        class="ant-modal-close"
        type="button"
      >
        <span
          class="ant-modal-close-x"
        >
          <span
            aria-label="close"
            class="anticon anticon-close ant-modal-close-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              fill-rule="evenodd"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="ant-modal-header"
      >
        <div
          class="ant-modal-title"
          id="test-id"
        >
          Edit User
        </div>
      </div>
      <div
        class="ant-modal-body"
      >
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-98ntnt"
        >
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="FirstName"
                  title="First Name"
                >
                  First Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-success"
                      id="FirstName"
                      placeholder="Enter First Name"
                      type="text"
                      value="Test"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="LastName"
                  title="Last Name"
                >
                  Last Name
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-success"
                      id="LastName"
                      placeholder="Enter Last Name"
                      type="text"
                      value="User"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Email"
                  title="Email"
                >
                  Email
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      autocomplete="off"
                      class="ant-input ant-input-lg css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-success"
                      id="Email"
                      placeholder="Email"
                      type="text"
                      value="test@example.com"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class="ant-form-item-required"
                  for="Password"
                  title="Password"
                >
                  Password
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper css-dev-only-do-not-override-98ntnt ant-input-outlined ant-input-status-success ant-input-password"
                    >
                      <input
                        aria-required="true"
                        autocomplete="new-password"
                        class="ant-input css-dev-only-do-not-override-98ntnt"
                        id="Password"
                        placeholder="Enter password"
                        type="password"
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-dev-only-do-not-override-98ntnt ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-col ant-form-item-label css-dev-only-do-not-override-98ntnt"
              >
                <label
                  class=""
                  for="Active"
                  title="Active"
                >
                  Active
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control css-dev-only-do-not-override-98ntnt"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      class="ant-switch css-dev-only-do-not-override-98ntnt ant-switch-checked"
                      id="Active"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="ant-modal-footer"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-default"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-primary"
          disabled=""
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    style="width: 0px; height: 0px; overflow: hidden; outline: none;"
    tabindex="0"
  />
</div>
`;
